# JPCloud

./: .gitnore  pom.xml  readme.md
JPCloudBackend/JPCloudBackend/: .gitignore  pom.xml
JPCloudBackend/JPCloudBackend/src/main/java/de/stynxyxy/jpcloudbackend/: Main.java
JPCloudBackend/JPCloudBackend/src/main/java/de/stynxyxy/jpcloudbackend/controller/: PingController.java
JPCloudBackend/JPCloudBackend/src/main/java/de/stynxyxy/jpcloudbackend/model/: FileInformation.java
JPCloudBackend/JPCloudBackend/src/main/java/de/stynxyxy/jpcloudbackend/service/: FileGetterService.java  FilestorageService.java
JPCloudBackend/JPCloudBackend/src/main/resources/: application.properties
JPCloudBackend/JPCloudBackend/src/main/resources/cloud/: .ninja_deps  raspberryssh.bat
JPCloudBackend/JPCloudBackend/src/main/resources/static/: dropdown.css  error.html  index.html  main.css  main.html  script.js  style.css  upload.css  upload.js
JPCloudFrontend/: CMakeLists.txt  DataHolder.cpp  DataHolder.h  FrontendSendFunctions.h  cloudwindow.ui  datatypes.h  httpRequestHandler.cpp  httpRequestHandler.h  main.cpp  mainwindow.ui  resources.qrc  ui_cloudwindow.h  ui_mainwindow.h
src/main/java/de/stynxyxy/jpclouddevelopment/: JpCloudDevelopmentApplication.java
src/main/java/de/stynxyxy/jpclouddevelopment/controller/: Dashboard.java
src/main/java/de/stynxyxy/jpclouddevelopment/controller/io/: FileIOController.java  FileManagementController.java
src/main/java/de/stynxyxy/jpclouddevelopment/controller/web/: Dashboard.java  FilePreviewController.java
src/main/java/de/stynxyxy/jpclouddevelopment/db/model/branch/: Branch.java  BranchRepository.java
src/main/java/de/stynxyxy/jpclouddevelopment/model/: StoredCloudFile.java
src/main/java/de/stynxyxy/jpclouddevelopment/security/: MvcConfig.java  WebSecurityConfiguration.java
src/main/java/de/stynxyxy/jpclouddevelopment/security/user/: CustomUserDetailsService.java  User.java  UserRepository.java
src/main/java/de/stynxyxy/jpclouddevelopment/security/user/role/: Role.java  RoleRepository.java
src/main/java/de/stynxyxy/jpclouddevelopment/service/IO/branch/: BranchService.java  BranchServiceImpl.java  (+2 more)
src/main/java/de/stynxyxy/jpclouddevelopment/util/io/: FileUtil.java
src/main/resources/: application.properties
src/main/resources/cloud/: Lastenheft Spiel It.docx
src/main/resources/cloud/dir/: login.html
src/main/resources/static/css/: preview.css  style.css
src/main/resources/static/js/: client.js
src/main/resources/templates/: dashboard.html  error.html  filePreview.html  login.html
src/test/java/de/stynxyxy/jpclouddevelopment/: JpCloudDevelopmentApplicationTests.java
(+33 files in other folders)
